system/forgejo/forgejo-ssh-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: forgejo-ssh-routing
  namespace: forgejo
spec:
  # This must match the name of the entryPoint you just defined in your Traefik values
  entryPoints:
    - ssh
  routes:
    # Because SSH has no domain name headers, we must use a wildcard catch-all
    - match: HostSNI(`*`)
      services:
        - name: forgejo-ssh
          port: 22
