system/forgejo/ingress-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: forgejo-ssh
  namespace: forgejo
spec:
  entryPoints:
    - ssh # Your Traefik installation must have an entrypoint named 'ssh' on port 22
  routes:
    - match: HostSNI(`git.192.168.122.133.nip.io`)
      services:
        - name: forgejo-ssh # Default service name created by the Helm chart
          port: 22
